--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Los2Primos - Inicio</title>
-    <meta name="description" content="ropa para chicos y chicas, moda, estilo">
+    <meta name="description" content="Las mejores ropas para niños y niñas">
     <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria">
     <!---bootstrap--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -16,6 +16,7 @@
 <!---animacion--->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+<!---body--->
 <body class=" bindex d justify-content-center aligin-items-center">
    <header>
     <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
@@ -49,7 +50,7 @@
     </header>
 <!---main--->
    <main>
-    <h1 class="titulo_bienvenida">Bienvenidos a indumetaria Los2Primos</h1>
+    <h1 class="titulo_bienvenida animate__animated animate__zoomIn">Bienvenidos a indumetaria Los2Primos</h1>
         <section >
             <div class="container">
         <div class="row ">
@@ -64,10 +65,9 @@
               </div>
 
         </div>
-
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center aligin-items-center">
+       <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center aligin-items-center">
             <div class="card h-100 card--fondo2" style="width: 300px; ">
-                <img src="./imagenes/remeragirld.jpg2.webp" class="card-img-top" alt="remera niñas" >
+                <img src="./imagenes/remeragirld.jpg2.webp" class="card-img-top" alt="remera para niñas" >
                 <div class="card-body">
                   <h5 class="card-title">remeras para nenas</h5>
                   <p class="card-text">encuentra todo la moda en remeras para niñas.</p>
@@ -77,7 +77,7 @@
         </div>
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center">
             <div class="card h-100 card--fondo" style="width: 300px;">
-                <img src="./imagenes/camp4.webp" class="card-img-top" alt="camperas niños" >
+                <img src="./imagenes/camp4.webp" class="card-img-top" alt="camperas para niños" >
                 <div class="card-body">
                   <h5 class="card-title">camperas para niños</h5>
                   <p class="card-text">los mejores abrigos para niños esta en Los2Primos, visita nuestro catalogo con un click</p>
@@ -93,7 +93,7 @@
             <div class="row   ">
                <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center">
                 <div class="card h-100 card--fondo2" style="width: 300px; ">
-                    <img src="./imagenes/campera_nena3.webp" class="card-img-top" alt="camperas niñas" >
+                    <img src="./imagenes/campera_nena3.webp" class="card-img-top" alt="camperas para niñas" >
                     <div class="card-body">
                       <h5 class="card-title">camperas para niñas</h5>
                       <p class="card-text">Lo ultimo en moda para niñas</p>
@@ -103,7 +103,7 @@
                </div>
                <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center">
                 <div class="card h-100 card--fondo" style="width: 300px; ">
-                    <img src="./imagenes/boy4.jpg" class="card-img-top" alt="remeras niños" >
+                    <img src="./imagenes/boy4.jpg" class="card-img-top" alt="remeras para niños" >
                     <div class="card-body">
                       <h5 class="card-title">remeras para niños</h5>
                       <p class="card-text">Las remeras mas cancheras estan aqui</p>
@@ -133,6 +133,5 @@
 </footer>
 <!---script bootstrap--->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 </html>
