--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!---titulo--->
     <title>Los2Primos - Contacto</title>
-    <meta name="description" content="contacto,promociones,registro,informacion">
+    <meta name="description" content="Registrate y obtene los mejores descuentos">
     <meta name="keywords" content="informacion,ropa,niños,niñas,moda,calidad,indumentaria,contacto">
+    <!---css--->
     <link rel="stylesheet" href="../scss/estilos.css">
+    <!---iconos--->
     <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>  
+    <!---aos--->
 <link
  rel="stylesheet"
  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"
@@ -18,8 +21,8 @@
     <title>Los2Primos</title>
     <!---bootstrap--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <!---cabecera--->
 </head>
+<!---body--->
 <body class="bmenu bg.primary">
     <nav class=" navbar navbar-expand-lg bg-light  justify-content-center aligin-items-center animate__animated animate__fadeInDownBig">
         <div class="container-fluid d-flex  flex-column justify-content-center aligin-items-center ">
@@ -53,7 +56,7 @@
       <main>
         <article class="container d-flex flex-column">
             
-            <h1 class=" titulo fs-1 d-flex justify-content-center aligin-items-center"> todavia no te registraste?</h1>
+            <h1 class=" titulo fs-1 d-flex justify-content-center aligin-items-center animate__animated animate__zoomIn"> todavia no te registraste?</h1>
             <p class=" parrafo fs-5 fst-italic justify-content-center aligin-items-center w-100"> Aprovecha todo tipo de descuentos en la sucursal o 
               via online, al registrarte tenes un 15% off en cualquier tipo de prenda abonando en efectivo, debito o transferencia bancaria, ademas 
               sorteamos todos los meses una gift card a nuestros fieles clientes, completa el formulario y llenate de oportunidades!!!
