--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!---css--->
-    <link rel="stylesheet" href="../scss/estilos.css">
    <!---titulo--->
  <title>Los2Primos - Niñas</title>
- <meta name="description" content="ropa para niñas,niñas,moda,estilo,glamour">
+ <meta name="description" content="Encontra lo mejor en moda para ellas">
     <meta name="keywords" content="ropa,ropa para chicas,moda,remeras,polleras,camperas">
+    <!---css--->
+  <link rel="stylesheet" href="../scss/estilos.css">
+  <!---script iconos--->
     <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
+    <!---aos--->
  <link
  rel="stylesheet"
  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"
@@ -18,8 +20,8 @@
  <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 <!---bootstrap--->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<!---cabecera--->
 </head>
+<!---body--->
 <body class="bniñxs">
   <header class="d-flex justify-content-center aligin-items-center">
   <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
@@ -66,7 +68,7 @@
         </section>
           <section class="container d-flex flex-column justify-content-center aligin-items-center">
             <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
-          <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
+          <div class="row w-100  mx-auto animate__animated animate__backInRight">
             <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/remeragirld.jpg1.webp" class=" img_niñex rounded float-start" alt="remeras para niñas" width="350px" height="200px">
             </div>
             <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/remeragirld.jpg2.webp" class=" img_niñex rounded mx-auto d-block" alt="remeras para niñas" width="350px" height="200px">
@@ -76,7 +78,7 @@
         </section>
         <section class="container d-flex flex-column justify-content-center aligin-items-center animate__animated animate__fadeInRightBig">
           <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
-          <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
+          <div class="row w-100  mx-auto animate__animated animate__backInUp">
             <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon_nena1.webp" class="img_niñex rounded float-start" alt="pantalon para niñas" width="350px" height="200px">
         </div>
             <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon_nena2.webp" class=" img_niñex rounded mx-auto d-block" alt="pantalon para niñas" width="350px" height="200px">
