--- a/pages/niños.html
+++ b/pages/niños.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!---css--->
-    <link rel="stylesheet" href="../scss/estilos.css">
    <!---titulo--->
  <title>Los2Primos - Niños</title>
- <meta name="description" content="ropa para chicos,indumentaria,niños,remeras,camperas,patalones">
+ <meta name="description" content="Encontra la ropa mas canchera para niños">
     <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria">
+      <!---css--->
+      <link rel="stylesheet" href="../scss/estilos.css">
+      <!---iconos--->
     <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
  <!---bootstrap--->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-   <!---cabecera--->
+ <!---aos--->
+ <link
+ rel="stylesheet"
+ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+ /> 
 </head>
-<link
-rel="stylesheet"
-href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-/>
+<!---body--->
 <body class="bniñxs">
   <header class="d-flex justify-content-center aligin-items-center">
   <nav class="  navbar navbar-expand-lg bg-light d-flex aligin-items-center justify-content-center animate__animated animate__fadeInDownBig">
@@ -64,7 +65,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     </section>
       <section class="container d-flex flex-column justify-content-center aligin-items-center">
         <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
-      <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
+      <div class="row w-100  mx-auto animate__animated animate__backInRight">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy.jpg" class=" img_niñex rounded float-start" alt="remera para niños" width="350px" height="200px">
         </div>
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy2.webp" class= "img_niñex rounded mx-auto d-block" alt="remera para niños" width="350px" height="200px">
@@ -72,7 +73,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy3.jpg" class=" img_niñex rounded float-end" alt="remera para niños" width="350px" height="200px">
         </div>
     </section>
-    <section class="container d-flex flex-column justify-content-center aligin-items-center animate__animated animate__fadeInRightBig">
+    <section class="container d-flex flex-column justify-content-center aligin-items-center animate__animated animate__backInUp">
       <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
       <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon.webp" class=" img_niñex rounded float-start" alt="pantalon para niños" width="350px" height="200px">
