--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,27 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!---css--->
-    <link rel="stylesheet" href="../scss/estilos.css">
-
-   <!---titulo--->
+    <!---titulo--->
  <title>Los2Primos - Nosotros</title>
- <meta name="description" content="informacion, quienes somos?,acerca de nosotros,nuesta historia">
+ <meta name="description" content="Conoce nuestra historia">
  <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,conocenos,creadores">
+ <!---css--->
+ <link rel="stylesheet" href="../scss/estilos.css">
+ <!---iconos--->
  <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
-
- <link
+ <!---aos--->
+<link
  rel="stylesheet"
  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"
 />
-
- <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-    <title>Los2Primos</title>
+<link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!---bootstrap--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-     <!---cabecera--->
 </head>
+<!---body--->
 <body class="bnosotros bg.primary">
     <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
         <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
